# HAL ALSA implementation - links when building for Linux with libasound
if(UNIX AND NOT APPLE)
  find_library(ASOUND_LIB asound)
  if(ASOUND_LIB)
    add_library(hal_alsa STATIC hal_audio_linux_alsa.c)
    target_include_directories(hal_alsa PUBLIC ${CMAKE_SOURCE_DIR}/include)
    target_link_libraries(hal_alsa PUBLIC ${ASOUND_LIB})
    message(STATUS "hal_alsa: ALSA backend for hal_audio_in/out")
  endif()
endif()
