add_library(decoder_opus STATIC decoder_opus.c)
target_include_directories(decoder_opus PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(decoder_opus PUBLIC media_core)
find_library(OPUS_LIB opus)
if(OPUS_LIB)
  target_link_libraries(decoder_opus PRIVATE ${OPUS_LIB})
  target_compile_definitions(decoder_opus PRIVATE HAVE_OPUS=1)
endif()
