# 优先 paplay 管道；否则 libpulse -> libasound (HAL)。TinyALSA 作为后备。
add_library(sink_speaker STATIC sink_speaker.c)
target_include_directories(sink_speaker PUBLIC ${CMAKE_SOURCE_DIR}/include)
if(UNIX AND NOT APPLE)
  find_program(PAPLAY_EXE paplay)
  if(PAPLAY_EXE)
    target_compile_definitions(sink_speaker PRIVATE USE_PAPLAY_PIPE=1)
    target_link_libraries(sink_speaker PUBLIC media_core)
    message(STATUS "sink_speaker: using paplay pipe (WSL/paplay identical path)")
  else()
    find_library(PULSE_LIB pulse)
    find_library(PULSE_SIMPLE_LIB pulse-simple pulsesimple)
    if(PULSE_LIB AND PULSE_SIMPLE_LIB)
      target_compile_definitions(sink_speaker PRIVATE USE_PULSE=1)
      target_link_libraries(sink_speaker PUBLIC media_core ${PULSE_LIB} ${PULSE_SIMPLE_LIB})
      message(STATUS "sink_speaker: using libpulse")
    else()
      find_library(ASOUND_LIB asound)
      if(ASOUND_LIB)
        target_compile_definitions(sink_speaker PRIVATE USE_ALSA=1)
        target_link_libraries(sink_speaker PUBLIC media_core ${ASOUND_LIB})
        if(TARGET hal_alsa)
          target_link_libraries(sink_speaker PUBLIC hal_alsa)
        endif()
        message(STATUS "sink_speaker: using libasound (HAL)")
      else()
        target_link_libraries(sink_speaker PUBLIC media_core tinyalsa)
        message(STATUS "sink_speaker: using TinyALSA")
      endif()
    endif()
  endif()
else()
  target_link_libraries(sink_speaker PUBLIC media_core)
endif()
