# Plugins (each plugin is a static lib that links media_core)
add_subdirectory(source_mic)
add_subdirectory(sink_wav)
add_subdirectory(source_file)
add_subdirectory(sink_speaker)
add_subdirectory(filter_resampler)
add_subdirectory(filter_frame_adapter)
add_subdirectory(filter_format_converter)
add_subdirectory(filter_mixer)
add_subdirectory(filter_volume)
add_subdirectory(decoder_mp3)
add_subdirectory(demuxer_mp3)
add_subdirectory(decoder_opus)
add_subdirectory(demuxer_ogg)
add_subdirectory(encoder_mp3)
add_subdirectory(encoder_opus)
add_subdirectory(muxer_mp3)
add_subdirectory(muxer_ogg)
add_subdirectory(sink_file)
